discussion/kv_engine/156244/156244_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-29928: Reset PID when configuration changes

Update the PID so that it will recheck the configuration
against its internal state.

Whenever one of the terms changes, the PID resets.

Change-Id: I247f6d9d67fd6ef4c2484077a0fe1091dd22ac6e

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2021-06-23 14:48:57.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-23 15:02:08.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10181/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/pid_controller.cc:24:22: error: out-of-line definition of "stepCore" does not match any declaration in "PIDController" [clang-diagnostic-error]
float PIDController::stepCore(
                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/pid_controller.h:49:21: error: no template named "function" in namespace "std" [clang-diagnostic-error]
               std::function<void(PIDController&)> checkAndMaybeReset) {
                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/pid_controller.h:101:25: error: no template named "function" in namespace "std" [clang-diagnostic-error]
                   std::function<void(PIDController&)> checkAndMaybeReset);
                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tools/pid_runner.cc:130:22: error: no matching member function for call to "step" [clang-diagnostic-error]
        auto c = pid.step<FauxClock>(pv, [](PIDController&) {});
                     ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10181/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/pid_controller.cc:24:22:
error: out-of-line definition of "stepCore" does not match any declaration in "PIDController" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10181/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/37262/ : FAILURE

Compile error at C:\Jenkins\workspace\kv_engine-windows-master\kv_engine\engines\ep\src\pid_controller.h(49): error C2039: "function": is not a member of "std" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/37262/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31786/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/pid_controller.h:49:21:
error: no template named "function" in namespace "std"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31786/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10834/ : FAILURE

Failure of GoogleTest "EphemeralOrPersistent/SetParamTest.DynamicConfigValuesModifiable/ephemeral":

<pre>
[ RUN      ] EphemeralOrPersistent/SetParamTest.DynamicConfigValuesModifiable/ephemeral
[2021-06-23T14:58:19.407Z] ../kv_engine/engines/ep/tests/module_tests/evp_engine_test.cc:282: Failure
[2021-06-23T14:58:19.407Z] Failed
[2021-06-23T14:58:19.407Z] Dynamic config key "defragmenter_auto_lower_threshold" cannot be set via any of the set...Param methods.
[2021-06-23T14:58:19.407Z] ../kv_engine/engines/ep/tests/module_tests/evp_engine_test.cc:282: Failure
[2021-06-23T14:58:19.407Z] Failed
[2021-06-23T14:58:19.407Z] Dynamic config key "defragmenter_auto_max_sleep" cannot be set via any of the set...Param methods.
[2021-06-23T14:58:19.407Z] ../kv_engine/engines/ep/tests/module_tests/evp_engine_test.cc:282: Failure
[2021-06-23T14:58:19.407Z] Failed
[2021-06-23T14:58:19.407Z] Dynamic config key "defragmenter_auto_min_sleep" cannot be set via any of the set...Param methods.
[2021-06-23T14:58:19.407Z] ../kv_engine/engines/ep/tests/module_tests/evp_engine_test.cc:282: Failure
[2021-06-23T14:58:19.407Z] Failed
[2021-06-23T14:58:19.407Z] Dynamic config key "defragmenter_auto_pid_d" cannot be set via any of the set...Param methods.
[2021-06-23T14:58:19.407Z] ../kv_engine/engines/ep/tests/module_tests/evp_engine_test.cc:282: Failure
[2021-06-23T14:58:19.407Z] Failed
[2021-06-23T14:58:19.407Z] Dynamic config key "defragmenter_auto_pid_dt" cannot be set via any of the set...Param methods.
[2021-06-23T14:58:19.407Z] ../kv_engine/engines/ep/tests/module_tests/evp_engine_test.cc:282: Failure
[2021-06-23T14:58:19.407Z] Failed
[2021-06-23T14:58:19.407Z] Dynamic config key "defragmenter_auto_pid_i" cannot be set via any of the set...Param methods.
[2021-06-23T14:58:19.407Z] ../kv_engine/engines/ep/tests/module_tests/evp_engine_test.cc:282: Failure
[2021-06-23T14:58:19.407Z] Failed
[2021-06-23T14:58:19.407Z] Dynamic config key "defragmenter_auto_pid_p" cannot be set via any of the set...Param methods.
[2021-06-23T14:58:19.407Z] ../kv_engine/engines/ep/tests/module_tests/evp_engine_test.cc:282: Failure
[2021-06-23T14:58:19.407Z] Failed
[2021-06-23T14:58:19.407Z] Dynamic config key "defragmenter_auto_upper_threshold" cannot be set via any of the set...Param methods.
[2021-06-23T14:58:19.407Z] ../kv_engine/engines/ep/tests/module_tests/evp_engine_test.cc:282: Failure
[2021-06-23T14:58:19.407Z] Failed
[2021-06-23T14:58:19.407Z] Dynamic config key "defragmenter_mode" cannot be set via any of the set...Param methods.
[2021-06-23T14:58:19.407Z] [  FAILED  ] EphemeralOrPersistent/SetParamTest.DynamicConfigValuesModifiable/ephemeral, where GetParam() = "ephemeral" (5 ms)
EphemeralOrPersistent/SetParamTest.DynamicConfigValuesModifiable/ephemeral
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10834/ )

Failure of an engine_testapp test:

<pre>
Running [0145/0157]: test_MB-19687_fixed...Unexpected stat: ep_defragmenter_auto_lower_threshold from stat group 
[2021-06-23T14:58:22.920Z] Unexpected stat: ep_defragmenter_auto_max_sleep from stat group 
[2021-06-23T14:58:22.920Z] Unexpected stat: ep_defragmenter_auto_min_sleep from stat group 
[2021-06-23T14:58:22.920Z] Unexpected stat: ep_defragmenter_auto_pid_d from stat group 
[2021-06-23T14:58:22.920Z] Unexpected stat: ep_defragmenter_auto_pid_dt from stat group 
[2021-06-23T14:58:22.920Z] Unexpected stat: ep_defragmenter_auto_pid_i from stat group 
[2021-06-23T14:58:22.920Z] Unexpected stat: ep_defragmenter_auto_pid_p from stat group 
[2021-06-23T14:58:22.920Z] Unexpected stat: ep_defragmenter_auto_upper_threshold from stat group 
[2021-06-23T14:58:22.920Z] Unexpected stat: ep_defragmenter_mode from stat group 
[2021-06-23T14:58:22.920Z] Unexpected stat: ep_defragmenter_auto_lower_threshold from stat group config
[2021-06-23T14:58:22.920Z] Unexpected stat: ep_defragmenter_auto_max_sleep from stat group config
[2021-06-23T14:58:22.920Z] Unexpected stat: ep_defragmenter_auto_min_sleep from stat group config
[2021-06-23T14:58:22.920Z] Unexpected stat: ep_defragmenter_auto_pid_d from stat group config
[2021-06-23T14:58:22.920Z] Unexpected stat: ep_defragmenter_auto_pid_dt from stat group config
[2021-06-23T14:58:22.920Z] Unexpected stat: ep_defragmenter_auto_pid_i from stat group config
[2021-06-23T14:58:22.920Z] Unexpected stat: ep_defragmenter_auto_pid_p from stat group config
[2021-06-23T14:58:22.920Z] Unexpected stat: ep_defragmenter_auto_upper_threshold from stat group config
[2021-06-23T14:58:22.920Z] Unexpected stat: ep_defragmenter_mode from stat group config
[2021-06-23T14:58:22.920Z] Unexpected stat: ep_frag_perc from stat group memory
[2021-06-23T14:58:22.920Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:7738 Test failed: `stats error" (missing stats)
[2021-06-23T14:58:22.920Z] (21 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10834/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11752/ : FAILURE

Compile error at [2021-06-23T14:53:09.602Z] ../kv_engine/engines/ep/src/pid_controller.h:49:16:
error: ?std::function? has not been declared
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11752/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12220/ : FAILURE

Compile error at [2021-06-23T14:50:53.957Z] ../kv_engine/engines/ep/src/pid_controller.h:49:21:
error: no template named "function" in namespace "std"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12220/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11902/ : FAILURE

Compile error at [2021-06-23T14:51:27.268Z] ../kv_engine/engines/ep/src/pid_controller.h:49:16:
error: ?std::function? has not been declared
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11902/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19788/ : FAILURE

Compile error at [2021-06-23T14:53:51.500Z] ../kv_engine/engines/ep/src/pid_controller.h:49:21:
error: no template named "function" in namespace "std"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19788/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8779/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
